<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:hint="@string/account_name_hint"
            android:inputType="textMultiLine">

        <requestFocus/>
    </EditText>

    <EditText
            android:id="@+id/account_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:hint="@string/account_initial_balance_hint"
            android:inputType="numberDecimal">

    </EditText>

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:text="@string/account_type_label"/>

    <Spinner
            android:id="@+id/account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"/>

</LinearLayout>
