<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:text="@string/account_source_label"/>

    <Spinner
            android:id="@+id/account_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"/>

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:text="@string/account_target_label"/>

    <Spinner
            android:id="@+id/account_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"/>

    <EditText
            android:id="@+id/transfer_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign_left_right"
            android:layout_marginRight="@dimen/marign_left_right"
            android:layout_marginTop="@dimen/marign_top_bottom"
            android:hint="@string/account_transfer_amount_hint"
            android:inputType="numberDecimal"/>
</LinearLayout>
